# Simple-Virtual-Machine

./: CMakeLists.txt  README.md
src/: main.c
src/cpu/: cpu.c  cpu.h
src/display/: display.c  display.h
src/stack/: stack.c  stack.h
src/test/: test.c
src/test/programs/: add_reg.txt  add_value.txt  and.txt  dec.txt  div_reg.txt  div_value.txt  inc.txt  mul_reg.txt  mul_value.txt  or.txt  pop.txt  push.txt  push_reg.txt  shift_left.txt  shift_right.txt  sub_reg.txt  sub_value.txt  xor.txt
src/vector/: vector.c  vector.h
